# Eidolon

./: .env  .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  README_zh-CN.md  pyo3.md
.cargo/: config.toml
.github/workflows/: deploy-wasm.yml
benches/: performance_benchmark.rs
docs/: README.md  README_zh-CN.md  architecture.md  architecture_zh-CN.md  cli.md  cli_zh-CN.md  contributing.md  contributing_zh-CN.md  credits.md  credits_zh-CN.md  development.md  development_zh-CN.md  getting-started.md  getting-started_zh-CN.md  library.md  library_zh-CN.md  resources.md  resources_zh-CN.md  troubleshooting.md  troubleshooting_zh-CN.md
docs/agents/: issue-tracker.md
examples/rust/: Cargo.toml
examples/rust/src/: main.rs
examples/wasm/: .gitignore  Cargo.toml  README.md  index.html  main.js  package-lock.json  package.json  vite.config.js
examples/wasm/src/: lib.rs
resources/: README.md  player.mtl  slim.mtl
src/: app.rs  camera.rs  character.rs  constants.rs  converter.rs  error.rs  lib.rs  main.rs  model.rs  renderer.rs  texture.rs  types.rs  utils.rs
src/renderer/: mod.rs  output.rs  pipeline.rs  readback.rs  uniforms.rs
src/utils/: converter.rs
tests/: integration.rs  snapshot.rs
