[package]
name = "eidolonmc"
version = "0.0.1-alpha"
description = "A Minecraft skin off-screen renderer written in Rust"
edition = "2021"
license-file = "LICENSE"
homepage = "https://github.com/bingling-sama/eidolon"
repository = "https://github.com/bingling-sama/eidolon"

[lib]
name = "eidolon"
path = "src/lib.rs"

[[bin]]
name = "eidolon"
path = "src/main.rs"

[[bench]]
name = "performance_benchmark"
harness = false

[dependencies]
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
glium = "0.29"
glutin = "0.26"
image = "0.25.5"
cgmath = "0.18.0"
tobj = "4.0.2"
env_logger = "0.11"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
