[workspace]
members = [".", "examples/rust"]

[package]
name = "eidolonmc"
version = "0.0.1-alpha"
description = "A Minecraft skin off-screen renderer written in Rust"
edition = "2021"
license-file = "LICENSE"
homepage = "https://github.com/bingling-sama/eidolon"
repository = "https://github.com/bingling-sama/eidolon"

[lib]
name = "eidolon"
path = "src/lib.rs"

[[bin]]
name = "eidolon"
path = "src/main.rs"

[[bench]]
name = "performance_benchmark"
harness = false

[features]
wasm = ["dep:wasm-bindgen-futures", "dep:console_log", "dep:futures-channel"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
wgpu = "25"
winit = "0.30"
pollster = "0.4"
bytemuck = { version = "1", features = ["derive"] }
image = "0.25.5"
cgmath = "0.18.0"
tobj = "4.0.2"
env_logger = "0.11"
wasm-bindgen-futures = { version = "0.4", optional = true }
console_log = { version = "1", optional = true }
futures-channel = { version = "0.3", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
